--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -35,7 +35,7 @@
 <div class="jumbotron text-center">
   <div class="container">
     <a href="/" class="lang-logo">
-      LOGO
+      <img src="images/logo.svg" width="100" height="100"/>
     </a>
     <h1>Getting Started with Ember.js on Heroku</h1>
     <p>This is a sample Ember.js application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
