--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -39,15 +39,11 @@
     </a>
     <h1>Getting Started with Ember.js on Heroku</h1>
     <p>This is a sample Ember.js application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/"><span class="glyphicon glyphicon-flash"></span> Getting Started with Ember.js LINK NEEDED</a>
+    <a type="button" class="btn btn-lg btn-default" href="https://www.heroku.com/ember"><span class="glyphicon glyphicon-flash"></span> Ember.js on Heroku</a>
     <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/ember-js-getting-started"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
   </div>
 </div>
 <div class="container">
-  <div class="alert alert-info text-center" role="alert">
-    To deploy your own copy, and learn the fundamentals of the Heroku platform, head over to the <a href="https://devcenter.heroku.com/articles/getting-started-with-ruby" class="alert-link">Getting Started with Ember.js on Heroku</a> tutorial LINK NEEDED.
-  </div>
-  <hr>
   <div class="row">
     <div class="col-md-6">
       <h3><span class="glyphicon glyphicon-info-sign"></span> How this sample app works</h3>
@@ -57,7 +53,6 @@
         <li>When Heroku received the source code, it grabbed all the dependencies in the <a href="https://github.com/heroku/ember-js-getting-started/blob/master/package.json">package.json</a>.</li>
         <li>The platform then spins up a dyno, a lightweight container that provides an isolated environment in which the slug can be mounted and executed.</li>
         <li>You can scale your app, manage it, and deploy over <a href="https://addons.heroku.com/">150 add-on services</a>, from the Dashboard or CLI.</li>
-        <li>Check out the <a href="https://devcenter.heroku.com/articles/getting-started-with-ruby">Getting Started</a> guide to learn more! LINK NEEDED</li>
       </ul>
     </div>
     <div class="col-md-6">
@@ -67,8 +62,5 @@
         <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
       </ul>
     </div>
-  </div>
-   <div class="alert alert-info text-center" role="alert">
-    Please do work through the Getting Started guide, even if you do know how to build such an application.  The guide covers the basics of working with Heroku, and will familiarize you with all the concepts you need in order to build and deploy your own apps.
   </div>
 </div>
