--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -39,7 +39,7 @@
     </a>
     <h1>Getting Started with Ember.js on Heroku</h1>
     <p>This is a sample Ember.js application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    <a type="button" class="btn btn-lg btn-default" href="https://www.heroku.com/ember"><span class="glyphicon glyphicon-flash"></span> Ember.js on Heroku</a>
+    <a type="button" class="btn btn-lg btn-default" href="https://www.heroku.com/emberjs"><span class="glyphicon glyphicon-flash"></span> Ember.js on Heroku</a>
     <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/ember-js-getting-started"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
   </div>
 </div>
