--- a/app/templates/electoral-map.hbs
+++ b/app/templates/electoral-map.hbs
@@ -1,7 +1,7 @@
 {{#flex-grid}}
 	{{#flex-grid-row}}
 		{{#flex-grid-item columns=12}}
-			{{dynamic-high-charts mode=chartMode content=model chartOptions=chartOptions theme=theme}}
+			{{dynamic-high-charts mode=chartMode content=chartData chartOptions=chartOptions theme=theme}}
 		{{/flex-grid-item}}
 	{{/flex-grid-row}}
 	{{#flex-grid-row}}
